# oh-my-dump

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ida-plugin.json  vcpkg.json
idaplugin/: dllmain.cpp  dllmain.h  version.h
idaplugin/dialog/: dialog.cpp  dialog.h
idaplugin/internals/export/: export.cpp  export.h  export_filters.h
idaplugin/internals/import/: import.cpp  import.h
idaplugin/internals/patterns/: byte_pattern.cpp  byte_pattern.h  pattern_search.cpp  pattern_search.h
idaplugin/utils/: types.h  utils.cpp  utils.h
idaplugin/utils/logger/: logger.cpp  logger.h
